[project]
name = "vidtoolz-hum-hai-rahi"
version = "0.0.3"
description = "Tools for hum hai rahi channel"
readme = "README.md"
authors = [{ name = "Sukhbinder Singh" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["vidtoolz", "vidtoolz-apply-greenscreen", "vidtoolz-add-sound"]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-hum-hai-rahi"
Changelog = "https://github.com/sukhbinder/vidtoolz-hum-hai-rahi/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-hum-hai-rahi/issues"
CI = "https://github.com/sukhbinder/vidtoolz-hum-hai-rahi/actions"

[project.entry-points."vidtoolz_plugins"]
h2r = "vidtoolz_hum_hai_rahi:h2r_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
